# io

./: BinaryReader.cs  BinaryWriter.cs  CMakeLists.txt  IO.csproj  IO.sln  IReader.cs  IStream.cs  IWriter.cs  LICENSE.md  README.md  Utils.cs
IO/: BinaryReader.cs  BinaryWriter.cs  Endianness.cs  IO.csproj  IReader.cs  IStream.cs  IWriter.cs  README.md  Utils.cs
IO.Test/: IO.Test.csproj  Program.cs
IO/Binary/: BinaryReader.cs  BinaryWriter.cs
include/TMH/: IO.h  IO.hpp
include/TMH/IO/: Endianness.h
source/: endianness.c
tests/: CMakeLists.txt  endianness.c  endianness_cpp.cpp
